gitops-config/overlays/base/kustomize-resources/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexvion-backend
  labels:
    app.kubernetes.io/name: nexvion
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: nexvion-ecommerce
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nexvion
    app.kubernetes.io/component: backend
