gitops-config/overlays/base/kustomize-resources/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexvion-frontend
  labels:
    app.kubernetes.io/name: nexvion
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: nexvion-ecommerce
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nexvion
    app.kubernetes.io/component: frontend
